@@ -1,5 +1,8 @@
 2006-09-29  Michal Nazarewicz  <mina86/AT/mina86.com>
 
+	* Makefile, README: + changelog.pl added
+	* changelog.pl: New file
+
 	* traf.sh: + parametrised
 	+ display changed
 
